--- a/members.html
+++ b/members.html
@@ -17,7 +17,7 @@
             <li><a id="active" href="members.html">OUR TEAM</a></li>
          </ul>
       </div>
-      <!--CONTENT-->
+      <!--CONTENT VRO-->
       <div class="headermembers">
          <h1>Meet The Team</h1>
          <h5>The people behind this website</h5>
