--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
          <h1>GENERAL CHEMISTRY 1</h1>
          <p>Chemistry is the scientific study of matter, its properties, composition, structure, and the changes it undergoes during reactions. It bridges the gap between physics and biology, playing a crucial role in understanding the substances that make up everything in the universe. It helps us understand the concept of matter.<br> To know more, click the links below</p>
          <div>
-            <button type="button"><span></span><a href="about.html">ABOUT</a></button>
             <button type="button"><span></span><a href="activities.html">ACTIVITIES</a></button>
+            <button type="button"><span></span><a href="members.html">OUR TEAM</a></button>
          </div>
       </div>
    </div>
