--- a/activities.html
+++ b/activities.html
@@ -18,7 +18,34 @@
          </ul>
       </div>
       <div class="contentact">
-      
+         <h1>Performance Tasks</h1>
+         <div class="image-container">
+            <div class="image-item">
+                <div class="overlay">
+                    <div class="text">
+                        <h2>Title 1</h2>
+                        <p>Quarter 1 PT 1</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image-item">
+                <div class="overlay">
+                    <div class="text">
+                        <h2>jhsda</h2>
+                        <p>Quarter 1 PT 2</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image-item">
+                <div class="overlay">
+                    <div class="text">
+                        <h2>kopal</h2>
+                        <p>Quarter 2 PT 1</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
       </div>
    </div>
 </body>
