--- a/members.html
+++ b/members.html
@@ -28,7 +28,7 @@
                <div class="photo" id="joval"></div>
                <div class="caption">
                   <div>Jared Andrei D. Joval</div>
-                  jaredandrei.joval.mnl@eac.edu.ph<br>sheeshhh
+                  jaredandrei.joval.mnl@eac.edu.ph<br>Wizard 
                </div>
             </div>
             <div class="photo-frame">
@@ -42,7 +42,7 @@
                <div class="photo" id="quidip"></div>
                <div class="caption">
                   <div>Francine R. Quidip</div>
-                  francine.quidip.mnl@eac.edu.ph<br>ghjk
+                  francine.quidip.mnl@eac.edu.ph<br>The Voice
                </div>
             </div>
             <div class="photo-frame">
@@ -56,7 +56,7 @@
                <div class="photo" id="jolnaniro"></div>
                <div class="caption">
                   <div>Rinwel B. Jolnaniro</div>
-                  rinwel.jolnaniro.mnl@eac.edu.ph<br>The Goat
+                  rinwel.jolnaniro.mnl@eac.edu.ph<br>GOAT
                </div>
             </div>
             <div class="photo-frame">
@@ -70,7 +70,7 @@
                <div class="photo" id="bajo"></div>
                <div class="caption">
                   <div>Andrea Faith Bajo</div>
-                  andreafaith.bajo.mnl@eac.edu.ph <br>asdfg
+                  andreafaith.bajo.mnl@eac.edu.ph <br>Lady General
                </div>
             </div>
             <div class="photo-frame">
