--- a/activities.html
+++ b/activities.html
@@ -21,6 +21,7 @@
          <h1>Performance Tasks</h1>
          <div class="image-container">
             <div class="image-item">
+            <img src="members/meow.png">
                 <div class="overlay">
                     <div class="text">
                         <h2>Title 1</h2>
@@ -29,6 +30,7 @@
                 </div>
             </div>
             <div class="image-item">
+            <img src="members/meow.png">
                 <div class="overlay">
                     <div class="text">
                         <h2>jhsda</h2>
@@ -37,6 +39,7 @@
                 </div>
             </div>
             <div class="image-item">
+            <img src="members/meow.png">
                 <div class="overlay">
                     <div class="text">
                         <h2>kopal</h2>
