--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <body>
    <div class="banner">
       <div class="navbar">
-         <a href="index.html"><img src="EAC.svg" class=logo width="100" ></a>
-         <h1 class="logotext">Emilio Aguinaldo College<br><div>Virtue | Excellence | Service</div></h1>
+         <div class="logo-container">
+            <a href="index.html"><img src="EAC.svg" class="logo"></a>
+            <h1 class="logotext">
+                Emilio Aguinaldo College<br>
+                <div>Virtue | Excellence | Service</div>
+            </h1>
+        </div>
          <ul> 
             <li><a id="active" href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
