added content activitie ty

--- a/activities.html
+++ b/activities.html
@@ -25,6 +25,7 @@
       <div class="contentact">
          <h1>Performance Tasks</h1>
          <div class="image-container">
+            <a href="pt/Q1PT1.html">
             <div class="image-item">
             <img src="members/meow.png">
                 <div class="overlay">
@@ -34,6 +35,8 @@
                     </div>
                 </div>
             </div>
+            </a>
+            <a href="pt/Q1PT1.html">
             <div class="image-item">
             <img src="members/meow.png">
                 <div class="overlay">
@@ -43,6 +46,8 @@
                     </div>
                 </div>
             </div>
+            </a>
+            <a href="pt/Q1PT1.html">
             <div class="image-item">
             <img src="members/meow.png">
                 <div class="overlay">
@@ -52,6 +57,7 @@
                     </div>
                 </div>
             </div>
+            </a>
         </div>
       </div>
       </div>
