--- a/members.html
+++ b/members.html
@@ -40,14 +40,14 @@
                <div class="photo" id="lagumbay"></div>
                <div class="caption">
                   <div>Maricar S. Lagumbay</div>
-                  maricar.lagumbay.mnl@eac.edu.ph<br>👻
+                  maricar.lagumbay.mnl@eac.edu.ph<br>Yabmugal
                </div>
             </div>
             <div class="photo-frame">
                <div class="photo" id="quidip"></div>
                <div class="caption">
                   <div>Francine R. Quidip</div>
-                  francine.quidip.mnl@eac.edu.ph<br>The Voice
+                  francine.quidip.mnl@eac.edu.ph<br>The Vice
                </div>
             </div>
             <div class="photo-frame">
