--- a/pt/Q1PT1.html
+++ b/pt/Q1PT1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title> Mem  </title>
-   <link rel="stylesheet" href="index.css">
+   <link rel="stylesheet" href="../index.css">
    <link rel="icon" href="EAC.svg">
 </head>
 <body>
