--- a/activities.html
+++ b/activities.html
@@ -30,7 +30,7 @@
                 <img src="members/meow.png">
                     <div class="overlay">
                         <div class="text">
-                            <h2>Title 1</h2>
+                            <h2>Paper Chromatography</h2>
                             <p>Quarter 1 PT 1</p>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                 <img src="members/meow.png">
                     <div class="overlay">
                         <div class="text">
-                            <h2>jhsda</h2>
+                            <h2>A Balancing Act</h2>
                             <p>Quarter 1 PT 2</p>
                         </div>
                     </div>
@@ -52,7 +52,7 @@
                 <img src="members/meow.png">
                     <div class="overlay">
                         <div class="text">
-                            <h2>kopal</h2>
+                            <h2>Molecular Modeling and Geometry in Real Life</h2>
                             <p>Quarter 2 PT 1</p>
                         </div>
                     </div>
