--- a/pt/Q1PT1.html
+++ b/pt/Q1PT1.html
@@ -6,20 +6,17 @@
    <link rel="icon" href="EAC.svg">
 </head>
 <body>
-   <div id="walter" class="banner">
+   <div id="ptbg" class="banner">
       <div class="navbar">
          <div class="logo-container">
             <a href="index.html"><img src="EAC.svg" class="logo"></a>
             <h1 class="logotext">
-                Emilio Aguinaldo College<br>
-                <div>Virtue | Excellence | Service</div>
+               General Chemistry 1<br>
+                <div>Quarter 1 Performance Task 1</div>
             </h1>
         </div>
-         <ul> 
-            <li><a href="index.html">HOME</a></li>
-            <li><a id="active" href="about.html">ABOUT</a></li>
-            <li><a href="activities.html">ACTIVITIES</a></li>
-            <li><a href="members.html">OUR TEAM</a></li>
+         <ul>
+            <li><a href="../activities.html">⇐ GO BACK</a></li>
          </ul>
       </div>
    </div>
