--- a/pt/Q1PT1.html
+++ b/pt/Q1PT1.html
@@ -3,7 +3,7 @@
 <head>
    <title> Mem  </title>
    <link rel="stylesheet" href="../index.css">
-   <link rel="icon" href="EAC.svg">
+   <link rel="icon" href="../EAC.svg">
 </head>
 <body>
    <div id="ptbg" class="banner">
