--- a/members.html
+++ b/members.html
@@ -54,7 +54,7 @@
                <div class="photo" id="insipido"></div>
                <div class="caption">
                   <div>Elly Crizeya H. Insipido</div>
-                  ellycrizeya.insipido.mnl@eac.edu.ph<br>zxcv
+                  ellycrizeya.insipido.mnl@eac.edu.ph<br>Odipisni
                </div>
             </div>
             <div class="photo-frame">
@@ -68,7 +68,7 @@
                <div class="photo" id="escueta"></div>
                <div class="caption">
                   <div>Margaret S. Escueta</div>
-                  margaret.escueta.mnl@eac.edu.ph<br>vroom vroom
+                  margaret.escueta.mnl@eac.edu.ph<br>Ferrari Racer vroom vroom
                </div>
             </div>
             <div class="photo-frame">
@@ -82,7 +82,7 @@
                <div class="photo" id="dayag"></div>
                <div class="caption">
                   <div>Kyla Mae C. Dayag</div>
-                  kylamae.dayag.mnl@eac.edu.ph<br>qwert
+                  kylamae.dayag.mnl@eac.edu.ph<br>Kyriel
                </div>
             </div>
          </div>
